fix: og설정을 위해 public/index.html에서 icon, title, description, type,image, url을 추가.

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      rel="icon"
+      href="https://14-openmind.s3.ap-northeast-2.amazonaws.com/favicon.ico"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,6 +27,20 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <meta property="og:title" content="OpenMind" />
+    <meta
+      property="og:description"
+      content="오픈마인드 웹페이지입니다, 코드잇 6기의 템플릿입니다. 참여자 : 이경원, 이소정, 유기주, 박지민, 안상균, 김동욱 멘토님. "
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://14-openmind.s3.ap-northeast-2.amazonaws.com/logo.png"
+    />
+    <meta
+      property="og:url"
+      content="http://14-openmind.s3-website.ap-northeast-2.amazonaws.com/"
+    />
     <title>React App</title>
   </head>
   <body>
