feat: meta 태그 description content 내용 변경

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <meta property="og:title" content="OpenMind" />
     <meta
       property="og:description"
-      content="오픈마인드 웹페이지입니다, 코드잇 6기의 템플릿입니다. 참여자 : 이경원, 이소정, 유기주, 박지민, 안상균, 김동욱 멘토님. "
+      content="코드잇 6기 14팀 프로젝트, 질의응답 소통 플랫폼 오픈마인드"
     />
     <meta property="og:type" content="website" />
     <meta
