fix: 파비콘도 사이트 미리보기와 같은 파일로 변경. 카카오톡 공유가능. 링크 마우스 오버시 손가락모양으로 변경.

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link
       rel="icon"
-      href="https://14-openmind.s3.ap-northeast-2.amazonaws.com/favicon.ico"
+      href="https://14-openmind.s3.ap-northeast-2.amazonaws.com/logo.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -56,5 +56,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script>
+      Kakao.init('0e85150dbf7795508ea414b347aafa90');
+    </script>
   </body>
 </html>
