feat: 버튼 비활성화 추가

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,11 @@
       content="http://14-openmind.s3-website.ap-northeast-2.amazonaws.com/"
     />
     <title>React App</title>
+    <style>
+      body {
+        background-color: rgba(249, 249, 249, 1);
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
